k8s/sensor-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: sensor-service
  template:
    metadata:
      labels:
        app: sensor-service
    spec:
      containers:
        - name: sensor-service
          image: nadinahmed/sensor-service:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: mysql-secrets
              mountPath: /run/secrets/mysql_user
              subPath: mysql_user
              readOnly: true
            - name: mysql-secrets
              mountPath: /run/secrets/mysql_password
              subPath: mysql_password
              readOnly: true
      volumes:
        - name: mysql-secrets
          secret:
            secretName: mysql-secret
