k8s/simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator
          image: nadinahmed/simulator:latest
