k8s/sensor-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-service
spec:
  selector:
    app: sensor-service
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
